# caldawarrior

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  foundry-mcp.toml
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: bug4-investigation.md  bugs.md  configuration.md
docs/adr/: loop-prevention.md  tw-field-clearing.md
docs/compatibility/: tasks-org.md
ref/design/: depends-mapping.md  goal.md  status-mapping.md
specs/.fidelity-reviews/: blackbox-integration-tests-2026-03-01-001-phase-phase-6.md  caldawarrior-2026-02-26-001-phase-phase-1-claude.md  caldawarrior-2026-02-26-001-phase-phase-1-gemini.md  caldawarrior-2026-02-26-001-phase-phase-1.md  caldawarrior-2026-02-26-001-phase-phase-2-claude.md  caldawarrior-2026-02-26-001-phase-phase-2-gemini.md  caldawarrior-2026-02-26-001-phase-phase-2.md  caldawarrior-2026-02-26-001-phase-phase-3-claude.md  caldawarrior-2026-02-26-001-phase-phase-3-gemini.md  caldawarrior-2026-02-26-001-phase-phase-3.md  caldawarrior-2026-02-26-001-phase-phase-4-claude.md  caldawarrior-2026-02-26-001-phase-phase-4-gemini.md  caldawarrior-2026-02-26-001-phase-phase-4.md  caldawarrior-2026-02-26-001-phase-phase-5-claude.md  caldawarrior-2026-02-26-001-phase-phase-5-gemini.md  caldawarrior-2026-02-26-001-phase-phase-5.md  (+14 more)
src/: caldav_adapter.rs  config.rs  error.rs  ical.rs  ir.rs  lib.rs  main.rs  output.rs  tw_adapter.rs  types.rs
(+171 files in other folders)
