[package]
name = "caldawarrior"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "caldawarrior"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
icalendar = "0.16"
